creating token autentication controller
