# routes/web.php
@@ -14,6 +14,13 @@
 /**
  * @SWG\Swagger(
  *     schemes={"http"},
+ *     @SWG\SecurityScheme(
+ *         securityDefinition="api_key",
+ *         type="apiKey",
+ *         name="Authorization",
+ *         in="header",
+ *         scopes={"scope": "Description of scope."}
+ *     ),
  *     @SWG\Info(title="TODO LIST API", version="0.1",
  *      @SWG\Contact(name="Rafael Pedrosa", url="https://www.rafadpedrosa.com.br"),
  *     )
@@ -25,10 +32,22 @@
  *     @SWG\Response(response="200", description="An print showing laravel lumen message")
  * )
  */
+// authenticated
 $router->group(['middleware' => [
-    //    'cors',
+    'cors',
+    'auth',
     'JsonApiMiddleware'
 ], 'prefix' => '/api'], function () use ($router) {
+
+    $router->resource('user', 'UserController');
+});
+
+// Public
+// 'cors'
+$router->group(['middleware' => [
+    'cors'
+], 'prefix' => '/api'], function () use ($router) {
+
     $router->get('/', function () use ($router) {
         return $router->app->version() . " - Todo API Working";
     });
@@ -37,15 +56,17 @@ $router->group(['middleware' => [
         return $content = file_get_contents('../public/swagger.json');
     });
 
+    $router->post('/authenticate', 'AuthController@authenticate');
 });
 
+
 // cors problem....
-//Route::options(
-//    '/{any:.*}',
-//    [
-//        'middleware' => ['cors'],
-//        function () {
-//            return response(['status' => 'success']);
-//        }
-//    ]
-//);
+Route::options(
+    '/{any:.*}',
+    [
+        'middleware' => ['cors'],
+        function () {
+            return response(['status' => 'success']);
+        }
+    ]
+);
